@@ -202,7 +202,8 @@ class PMF_Category
                 fc.parent_id AS parent_id,
                 fc.name AS name,
                 fc.description AS description,
-                fc.user_id AS user_id
+                fc.user_id AS user_id,
+                fc.active AS active
             FROM
                 %sfaqcategories fc
             LEFT JOIN
@@ -212,7 +213,8 @@ class PMF_Category
             LEFT JOIN
                 %sfaqcategory_user fu
             ON
-                fc.id = fu.category_id%s
+                fc.id = fu.category_id
+            %s
             GROUP BY
                 fc.id, fc.lang, fc.parent_id, fc.name, fc.description, fc.user_id
             ORDER BY
@@ -247,7 +249,7 @@ class PMF_Category
         $_query = '';
         $query  = sprintf('
             SELECT
-                id, lang, parent_id, name, description, user_id
+                id, lang, parent_id, name, description, user_id, active
             FROM
                 %sfaqcategories
             WHERE ',
@@ -282,7 +284,7 @@ class PMF_Category
     {
         $query = sprintf("
             SELECT
-                id, lang, parent_id, name, description, user_id
+                id, lang, parent_id, name, description, user_id, active
             FROM
                 %sfaqcategories",
             PMF_Db::getTablePrefix());
@@ -355,21 +357,6 @@ class PMF_Category
     }
 
     /**
-     * Get the line number where to find the node $id
-     *
-     * @param  integer $id Category id
-     * @return integer
-     */
-    private function getLine($id)
-    {
-        for ($i = 0; $i < count($this->lineTab); $i++) {
-            if ($this->lineTab[$i]['id'] == $id) {
-                return $i;
-            }
-        }
-    }
-
-    /**
      * Transforms the linear array in a 1D array in the order of the tree, with
      * the info
      *
@@ -388,6 +375,7 @@ class PMF_Category
             $thisParent_id   = $this->categoryName[$id]['parent_id'];
             $thisName        = $this->categoryName[$id]['name'];
             $thisdescription = $this->categoryName[$id]['description'];
+            $active          = $this->categoryName[$id]['active'];
         }
 
         if ($num > 0) {
@@ -419,7 +407,8 @@ class PMF_Category
                 'parent_id'   => $thisParent_id,
                 'childs'      => $tabs,
                 'tree'        => $tree,
-                'description' => $thisdescription
+                'description' => $thisdescription,
+                'active'      => $active
             );
         }
 
@@ -475,17 +464,6 @@ class PMF_Category
         }
 
         return $childs;
-    }
-
-    /**
-     * number of childs of the $id
-     *
-     * @param  integer $id Category id
-     * @return integer
-     */
-    private function numChilds($id)
-    {
-        return count($this->getNodes($id));
     }
 
     /**
@@ -722,6 +700,7 @@ class PMF_Category
         $ret[1] = $this->treeTab[$y]["name"];
         $ret[2] = $this->treeTab[$y]["id"];
         $ret[3] = $this->treeTab[$y]["description"];
+        $ret[4] = $this->treeTab[$y]["active"];
         return $ret;
     }
 
@@ -1045,7 +1024,8 @@ class PMF_Category
             SET
                 name = '%s',
                 description = '%s',
-                user_id = %d
+                user_id = %d,
+                active = %d
             WHERE
                 id = %d
             AND
@@ -1054,11 +1034,45 @@ class PMF_Category
             $category_data['name'],
             $category_data['description'],
             $category_data['user_id'],
+            $category_data['active'],
             $category_data['id'],
             $category_data['lang']);
         $this->_config->getDb()->query($query);
 
         return true;
+    }
+
+    /**
+     * Returns the data of the given category
+     *
+     * @param integer $categoryId
+     *
+     * @return PMF_Entity_Category
+     */
+    public function getCategoryData($categoryId)
+    {
+        $entity = new PMF_Entity_Category();
+
+        $query = sprintf(
+            "SELECT * FROM %sfaqcategories WHERE id = %d AND lang = '%s'",
+            PMF_Db::getTablePrefix(),
+            $categoryId,
+            $this->language
+        );
+
+        $result = $this->_config->getDb()->query($query);
+
+        if ($row = $this->_config->getDb()->fetchObject($result)) {
+            $entity->setId($row->id)
+                ->setLang($row->lang)
+                ->setParentId($row->parent_id)
+                ->setName($row->name)
+                ->setDescription($row->description)
+                ->setUserId($row->user_id)
+                ->setActive($row->active);
+        }
+
+        return $entity;
     }
 
     /**
